Create AddContactActivity with layout and start it when clicked on Add new contact button in HomeActivity

--- a/AddressBook/src/main/res/layout/home_activity.xml
+++ b/AddressBook/src/main/res/layout/home_activity.xml
@@ -8,7 +8,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_new_contact"
-            android:id="@+id/button_add" />
+            android:id="@+id/button_add"
+            android:onClick="startAddNewContactActivity"/>
     <ListView
             android:layout_width="fill_parent"
             android:layout_height="0dp"
