--- a/AddressBook/src/main/res/layout/add_contact_activity.xml
+++ b/AddressBook/src/main/res/layout/add_contact_activity.xml
@@ -42,14 +42,14 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="New Button"
+                    android:text="@string/cancel"
                     android:id="@+id/button"/>
 
             <Button
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="New Button"
+                    android:text="@string/save"
                     android:id="@+id/button2"/>
         </LinearLayout>
     </RelativeLayout>
