--- a/AddressBook/src/main/res/layout/add_contact_activity.xml
+++ b/AddressBook/src/main/res/layout/add_contact_activity.xml
@@ -43,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/cancel"
+                    android:onClick="closeActivity"
                     android:id="@+id/button"/>
 
             <Button
@@ -50,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/save"
+                    android:onClick="addContact"
                     android:id="@+id/button2"/>
         </LinearLayout>
     </RelativeLayout>
