--- a/AddressBook/src/main/res/layout/add_contact_activity.xml
+++ b/AddressBook/src/main/res/layout/add_contact_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
     <EditText
             android:layout_width="match_parent"
@@ -11,49 +12,47 @@
             android:inputType="textPersonName"
             android:id="@+id/full_name"
             android:hint="@string/full_name"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"/>
 
     <EditText
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:hint="@string/phone_number"
             android:id="@+id/phone"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:layout_below="@id/full_name"
+            android:layout_alignParentLeft="true"/>
 
     <EditText
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:hint="@string/email_address"
             android:id="@+id/email"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:layout_below="@id/phone"
+            android:layout_alignParentLeft="true"/>
 
-    <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-        <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
-            <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/cancel"
-                    android:onClick="closeActivity"
-                    android:id="@+id/button"/>
-
-            <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/save"
-                    android:onClick="addContact"
-                    android:id="@+id/button2"/>
-        </LinearLayout>
-    </RelativeLayout>
-
-</LinearLayout>
+    <View android:layout_width="0dp"
+          android:layout_height="0dp"
+          android:id="@+id/strut"
+          android:layout_centerHorizontal="true" />
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:onClick="closeActivity"
+            android:id="@+id/button"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignRight="@id/strut" />
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            android:onClick="addContact"
+            android:id="@+id/button2"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/strut"/>
+</RelativeLayout>
