--- a/AddressBook/src/main/res/layout/view_contact_activity.xml
+++ b/AddressBook/src/main/res/layout/view_contact_activity.xml
@@ -2,62 +2,63 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <LinearLayout android:orientation="horizontal"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView"
-                android:contentDescription="@string/avatar"
-                android:src="@drawable/ic_launcher"/>
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content">
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:contentDescription="@string/avatar"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:src="@drawable/ic_launcher" />
     <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/full_name"
             android:hint="@string/full_name"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView"/>
 
     <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/phone_number"
             android:id="@+id/phone"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:layout_below="@id/full_name"
+            android:layout_toRightOf="@+id/imageView" />
 
     <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/email_address"
             android:id="@+id/email"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
-    </LinearLayout>
-    </LinearLayout>
-        <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
-            <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/facebook"
-                    android:onClick="openFacebook"
-                    android:id="@+id/button"/>
+            android:layout_below="@id/phone"
+            android:layout_toRightOf="@+id/imageView" />
 
-            <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/call"
-                    android:onClick="callContact"
-                    android:id="@+id/button2"/>
-        </LinearLayout>
+    <View android:id="@+id/strut"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
+          android:layout_centerHorizontal="true"
+          android:layout_alignParentBottom="true" />
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/facebook"
+            android:onClick="openFacebook"
+            android:id="@+id/button"
+            android:layout_alignParentLeft="true"
+            android:layout_alignRight="@id/strut"
+            android:layout_alignParentBottom="true" />
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/call"
+            android:onClick="callContact"
+            android:id="@+id/button2"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/button"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
