--- a/AddressBook/src/main/res/layout/add_contact_activity.xml
+++ b/AddressBook/src/main/res/layout/add_contact_activity.xml
@@ -54,5 +54,5 @@
             android:id="@+id/button2"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_toRightOf="@id/strut"/>
+            android:layout_alignLeft="@id/strut"/>
 </RelativeLayout>
